# src/Pinventory.Pins.Api/Importing/Dtos/StartImportDto.cs
@@ -1,0 +1,3 @@
+﻿namespace Pinventory.Pins.Api.Importing.Dtos;
+
+public record StartImportDto(DateTimeOffset? Start, DateTimeOffset? End);
